force-app/main/default/objects/Automated_Report_Processing_Options__c/Automated_Report_Processing_Options__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Automated Report Processing Options</label>
</CustomObject>