force-app/main/default/objects/Automated_Report_Processing_Options__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this job active?</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>