force-app/main/default/objects/Automated_Report_Processing_Options__c/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <description>ID of the campaign associated with this job.</description>
    <label>Campaign ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>