force-app/main/default/objects/Automated_Report_Processing_Options__c/fields/Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status__c</fullName>
    <description>The status of the campaign member when added to the campaign.</description>
    <label>Campaign Member Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>