force-app/main/default/objects/Automated_Report_Processing_Options__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <description>Name of the college associated with this list.</description>
    <label>College</label>
    <length>255</length>
    <type>Text</type>
</CustomField>