force-app/main/default/objects/Automated_Report_Processing_Options__c/fields/Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Distribution_List__c</fullName>
    <description>Email addresses that will be receiving this report. These are comma separated.</description>
    <label>Distribution List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>