force-app/main/default/objects/Automated_Report_Processing_Options__c/fields/Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Run__c</fullName>
    <description>Date/time of the last run of this job.</description>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>