force-app/main/default/objects/Automated_Report_Processing_Options__c/fields/Print_List__c.field-meta.xml
<CustomField>
    <fullName>Print_List__c</fullName>
    <description>Name of the print list associated with this media.</description>
    <label>Print List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>