force-app/main/default/objects/Automated_Report_Processing_Options__c/fields/Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_ID__c</fullName>
    <description>The report ID that needs to be processed.</description>
    <label>Report ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>