force-app/main/default/objects/Automated_Report_Processing_Options__c/fields/Run_Required__c.field-meta.xml
<CustomField>
    <fullName>Run_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set automatically when this job is required to be run.</description>
    <label>Run Required</label>
    <type>Checkbox</type>
</CustomField>