force-app/main/default/objects/Automated_Report_Processing_Options__c/fields/Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Day__c</fullName>
    <description>The day of the week this job needs to be run.</description>
    <label>Schedule Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>