force-app/main/default/objects/Automated_Report_Processing_Options__c/fields/Schedule_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Frequency__c</fullName>
    <description>How often is this job scheduled to run?</description>
    <label>Schedule Frequency</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>